kubernetes/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: 512378127667.dkr.ecr.ca-central-1.amazonaws.com/eks-platform-app:d7851022c959f88c04a1ba219b7f7d7959cb20fd
          ports:
            - containerPort: 8080
